@@ -13,6 +13,11 @@ be read in 'help patchlevels'.
 
 Version 1.8.5 patchlevel 4                                 ??? ??, 201?
 
+Minor changes:
+ * ansi() now accepts a space-separated list of color codes, with later
+   groups overriding earlier ones. Allows you to specify basic ANSI codes
+   after XTERM color codes. Suggested by spork, [Rhost]. [MG]
+
 Fixes:
  * %c contained the evaluated input (the same as %u), instead of the
    unevaluated input. Reported by Ingwaz. [MG]
